--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Colors</title>
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.2.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>HTML help</title>
   </head>
   <body>
     <div class="container">
-      <h1>What's your favorite color?</h1>
-      <p>Click a button to choose what color you'd like this page to be:</p>
+    <div id=pile>
+      <div id=links>
 
-      <button class="btn btn-success" id="green">Green</button>
-      <button class="btn btn-warning" id="yellow">Yellow</button>
-      <button class="btn btn-danger" id="red">Red</button>
-    </div>
+      <div id=header>
+      <span class="header"><h1>HTML help</h1></span>
+
+
+      <div id=paragraph>
+      <p><span class="paragraph">This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
+
+      <p>Look at this cute walrus!</span></p>
+
+
+      <div id=img>
+      <span class="img"><img src="img/walrus.jpg"></span>
+      </div>
+    <!-- </div>
+  </div>
+    </div> -->
+
   </body>
 </html>
